# modman

./: .gitignore  Cargo.toml  README.md
src/: config.rs  config_sync.rs  datatypes.rs  errors.rs  install.rs  macros.rs  main.rs  structs.rs  utils.rs
src/api/: mod.rs  modrinth.rs
src/commands/: add.rs  add_source.rs  command_handler.rs  command_structs.rs  init.rs  install.rs  mod.rs  sync.rs  version.rs
src/commands/add_tools/: dependencies.rs  mod.rs  package.rs
