[package]
name = "modman"
version = "0.1.0"
edition = "2021"
authors = ["A0"]
description = "Minecraft Mod Manager CLI, uses Modrinth and CurseForge."

[dependencies]
color-eyre = "0.6.3"
colored = "2.1.0"
crossterm = "0.27.0"
futures = "0.3.30"
hex = "0.4.3"
indicatif = "0.17.8"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
serde = { version = "1.0.202", features = ["derive"] }
sha2 = "0.10.8"
terminal_size = "0.3.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.13"
